@@ -17,6 +17,7 @@ Bugs fixed:
 - 1993385 sfcb restarts itself on startup
 - 1914077 MI function signatures missing CMPIStatus * parameter
 - 1999175 CMAddContextEntry doesn't update entries, only adds
+- 2001879 sfcb string compares for qualifier name are case-sensitive
 
 Changes in 1.3.1
 ================
